= 2.0.0.59 =
* GD Listings widget title not working with pagination - FIXED
* Some fields are not stripping slashes - FIXED

= 2.0.0.58 =
* Sometimes distance value not showing on search page - FIXED
* Search with zip returns wrong address with OpenStreetMap - FIXED
* Badge not working for address field - FIXED
* Display email not working in elementor preview - FIXED
* Categories widget looses location on CPT switch - FIXED
* New non single use predefined custom fields should have ability to change field key - FIXED
* Post images widget can now be used as a carousel by setting the limit_show value when used as a slider - ADDED
* Sample CSV file updated to show new image format separator :: instead of , - FIXED
* Class geodir-featured added to body class if post is featured - ADDED
* Under certain settings configurations a user without editor privileges can set post status to revision - SECURITY

= 2.0.0.57 =
* Image extension with uppercase not showing in backend - FIXED
* Recently viewed widget can break single page slider in some cases - FIXED
* Recently viewed widget setting added to load slider script if archive item has slider - ADDED

= 2.0.0.56 =
* Genesis theme not using h1 tags for archive page titles - FIXED
* GD SEO titles should still be used even if Yoast is installed - CHANGED
* Update jQuery FlexSlider to v2.0.2 - CHANGED
* BCC option missing for emails of the listing submitted for pending review - FIXED
* Frontend delete listing should refresh page on success - CHANGED
* Link is broken in phone badge - FIXED
* Business hours default offset should not use DST (Daylight Savings Time) in add listing - FIXED
* Category FA icon and color not cleared on save - FIXED
* Post Address widget alignment argument changed to mean float positioning - CHANGED
* Post meta and post address now have alignment and text-alignment arguments - ADDED
* Post images widget thumbnail size now forces that size instead of responsive - CHANGED